# blue2joy

./: README.md  TODO.md
.github/workflows/: ci.yml  ci_web.yml
atari/: .clang-format  CMakeLists.txt  README.md  build.sh  shell.nix
atari/src/: main.c  spi.c  spi.h
dev/: 404.html  index.html
dev/assets/: index-2cj0_SiD.js  index-BOdk0nYi.js  index-BOdk0nYi.js.map  index-CIEK3Y4_.js  (+8 more)
doc/: README.md  button-functions.md  compatible-devices.md  fw-architecture.md  ground-safety.md  paddle-emulation.md  profile-examples.md  state-signalling.md
firmware/: .clang-format  CMakeLists.txt  README.md  TODO  VERSION  prj.conf  west.yml
firmware/boards/: xiao_ble.overlay
firmware/src/: main.c
firmware/src/bthid/: bthid.c  bthid.h  bthid_bonds.c  bthid_conn.c  bthid_discovery.c  bthid_internal.h  bthid_report.c  bthid_scan.c  report_map.c  report_map.h
firmware/src/btjp/: btjp.h  btjp_commands.c  btjp_events.c  btjp_msg.h  btjp_utils.c  btjp_utils.h
firmware/src/btsvc/: btsvc.c  btsvc.h
firmware/src/devmgr/: devmgr.c  devmgr.h  devmgr_advlist.c  devmgr_devlist.c  devmgr_internal.h  settings.c  settings.h
firmware/src/event/: event.h  event_bus.c  event_bus.h  event_queue.c  event_queue.h
firmware/src/io/: buttons.c  buttons.h  io_pin.c  io_pin.h  io_pot.c  io_pot.h  joystick.c  joystick.h  paddle.c  paddle.h  rgbled.c  rgbled.h  rgbled_seq.c  rgbled_seq.h  spislave.c  spislave.h
firmware/src/mapper/: mapper.c  mapper.h  profiles.c  profiles.h  settings.c  settings.h
hardware/: README.md
latest/: 404.html
main/: 404.html  index.html
webconfig/: .gitignore  README.md  eslint.config.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+77 files in other folders)
